<?xml version="1.0" encoding="utf-8"?>

<!-- //Updated on 25/01/2022 by RAMPIT-->
<!-- Function - //used to create PDF-->
<!-- Location  - Dashboard -> Print  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearr"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
   >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/White"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="start"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="5dp"
                        android:editable="false"
                        android:fontFamily="@font/open_regular"
                        android:text="@string/Date"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/da"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:editable="false"
                        android:fontFamily="@font/open_regular"
                        android:text="Date :"
                        android:textAlignment="center"
                        android:textColor="?attr/textcolor4"
                        android:textSize="15dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:editable="false"
                        android:fontFamily="@font/open_regular"
                        android:gravity="start"
                        android:text="-"
                        android:textAlignment="textStart"

                        android:textColorHint="@color/gray"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:editable="false"
                        android:fontFamily="@font/open_regular"
                        android:gravity="start"
                        android:text=""
                        android:textAlignment="textStart"
                        android:textColor="?attr/textcolor4"
                        android:textSize="15dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:editable="false"
                        android:fontFamily="@font/open_regular"
                        android:gravity="start"
                        android:text="-"
                        android:textAlignment="textStart"

                        android:textColorHint="@color/gray"
                        android:textSize="15dp" />
                    <ImageView
                        android:id="@+id/sesimg"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="2dp"
                        android:background="@drawable/sun" />

                    <TextView
                        android:id="@+id/sess"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:editable="false"
                        android:fontFamily="@font/open_regular"
                        android:gravity="start"
                        android:text="Session :"
                        android:textAlignment="textStart"
                        android:textColor="?attr/textcolor4"
                        android:textSize="15dp" />
                </LinearLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:gravity="left"
                    android:text="@string/select_orientation"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20dp" />
                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">
                    <RadioButton android:id="@+id/horizz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/horizontal"
                        android:textColor="?attr/textcolor1"
                        android:button="@drawable/custom_radio"

                        />
                    <RadioButton android:id="@+id/vertii"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="42dp"
                        android:text="@string/vertical"
                        android:textColor="?attr/textcolor1"
                        android:button="@drawable/custom_radio"

                        />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/select_following"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/openingdate"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:textColor="?attr/textcolor1"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/openingdate"
                            />

                        <CheckBox
                            android:id="@+id/totaldays"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/days"
                            android:textColor="?attr/textcolor1" />
                        <CheckBox
                            android:id="@+id/paiddays"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:textColor="?attr/textcolor1"
                            android:layout_marginRight="20dp"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/paid_days"
                            />

                        <CheckBox
                            android:id="@+id/balancedays"
                            android:layout_width="150dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/balanace_days"
                            android:textColor="?attr/textcolor1" />
                        <CheckBox
                            android:id="@+id/missingdays"
                            android:layout_width="150dp"
                            android:layout_height="22dp"
                            android:layout_marginLeft="20dp"
                            android:textColor="?attr/textcolor1"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/missing_days"
                            />
                        <CheckBox
                            android:id="@+id/installment"
                            android:layout_width="150dp"
                            android:layout_height="22dp"
                            android:layout_marginLeft="20dp"
                            android:textColor="?attr/textcolor1"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/installment"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content">
                        <CheckBox
                            android:id="@+id/closingdate"
                            android:layout_width="150dp"
                            android:layout_marginTop="10dp"
                            android:textColor="?attr/textcolor1"
                            android:layout_height="wrap_content"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/closing_date"
                            />

                        <CheckBox
                            android:id="@+id/debit"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="10dp"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/debit1"
                            android:textColor="?attr/textcolor1" />
                        <CheckBox
                            android:id="@+id/paidamount"
                            android:layout_width="150dp"
                            android:textColor="?attr/textcolor1"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/paid_amount"
                            />
                        <CheckBox
                            android:id="@+id/balanceamount"
                            android:layout_width="150dp"
                            android:layout_marginTop="10dp"
                            android:textColor="?attr/textcolor1"
                            android:layout_height="wrap_content"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/balance_amount"
                             />

                        <CheckBox
                            android:id="@+id/missingamount"
                            android:layout_width="150dp"
                            android:textColor="?attr/textcolor1"
                            android:layout_height="25dp"
                            android:layout_marginTop="10dp"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/missing_amount"
                            />
                        <CheckBox
                            android:id="@+id/days"
                            android:layout_width="150dp"
                            android:textColor="?attr/textcolor1"
                            android:layout_height="25dp"
                            android:layout_marginTop="10dp"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/total_days"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:text="@string/select_order_by"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="20dp" />
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">
                        <RadioButton android:id="@+id/iddd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/id"
                            android:textColor="?attr/textcolor1"
                            android:button="@drawable/custom_radio"

                            />

                        <RadioButton
                            android:id="@+id/orderid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_id"
                            android:textColor="?attr/textcolor1"
                            android:button="@drawable/custom_radio"
                            android:layout_marginLeft="85dp"
                             />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/Red"
    android:textSize="15dp"
    android:id="@+id/wq"/>
            <Button
                android:id="@+id/show"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_selector"
                android:text="@string/show"
                android:layout_gravity="center"

                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>